<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CampusCare</string>
    <string name="tagline">Modern facility management for next-gen campuses.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_credentials">Please enter your credentials.</string>
    <string name="university_email">UNIVERSITY EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_btn">Continue</string>
    <string name="full_name">FULL NAME</string>
    <string name="campus_email">CAMPUS EMAIL</string>
    <string name="join_network">Join our maintenance network.</string>
    <string name="need_a_fix">Need a Fix?</string>
    <string name="report_issues">Report issues instantly and track progress.</string>
    <string name="report_now">Report Now</string>
    <string name="active_orders">Active Orders</string>
    <string name="history">History</string>
    <string name="report_issue">Report Issue</string>
    <string name="submit_request">Submit Request</string>
    <string name="notifications">Notifications</string>
    <string name="repair_history">Repair History</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="rate_service">Rate Service</string>
    <string name="submit_review">Submit Review</string>
    <string name="job_board">Job Board</string>
    <string name="schedule">Schedule</string>
    <string name="job_detail">Job Detail</string>
    <string name="save_changes">Save Changes</string>
    <string name="app_control">App Control</string>
    <string name="system_controller">SYSTEM CONTROLLER</string>
    <string name="sample_review_comment">Very professional and fast!</string>

    <string name="terms_note">By continuing, you agree to our Terms of Service\nand Privacy Policy</string>

    <string name="active_jobs">Active Jobs</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>

    <string name="dashboard">Dashboard</string>
    <string name="users_management">Users Management</string>
    <string name="all_tickets">All Tickets</string>
    <string name="technician_reviews">Technician Reviews</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>

    <string name="section_work">WORK</string>
    <string name="section_account">ACCOUNT</string>
    <string name="section_overview">OVERVIEW</string>
    <string name="section_services">SERVICES</string>

</resources>